Version 1.7.4+svn:
 * Language and i18n:
   * Setup for tracking localized images.
   * Updated translations: Serbian.

Version 1.7.4:
 * AI:
   * Formula AI debugger (uses -new-widgets)
   * New 'debug()' formula function
   * Fixed crashes and infinite loops on AI turn
 * Animations
   * Movement have the number of steps done in value and the number of step left
     in value_second, this allows take-off and landing animations
 * Campaigns
   * Legend of Wesmere
     * Scenario 3 redesigned
     * Fixed wrong or unclear scenario objectives
     * Scenario 16: Reduced the number of wolf riders
 * Editor
   * Better support for conflicting terrain letters across add-ons, now
     in the event of a conflict the terrain will appear in all terrain
     groups as opposed to appearing in one of them multiple times.
   * Added remembering of the show terrain codes and coordinates options
 * Graphics:
   * New portraits for Ancient Wose, Ruffian, Master-at-arms, Naga
     Warrior/Myrmidon, Grand Knight, Merman Hunter.
   * Updates to Peasant, Spearman and Swordsman portraits.
   * New melee animation for Thunderguard, Dragonguard.
   * New base frame and animations for Inferno Drake, Fire Drake.
 * Language and i18n:
   * Updated translations: Chinese (Traditional), German, Lithuanian, Russian,
     Serbian
 * Music and sound
   * "Journey's End" from Mattias Westlund
   * "Over the Northern Mountains" from Mattias Westlund
   * Added horn signal sound effects
 * Units
   * New weapon names for a number of drake attacks to account for changes to
     the sprites.
 * User interface:
   * Removed the hotkey to enable/disable mouse scrolling
   * Added a horizontal listbox
   * New basic support for specifying waypoints (via a new hotkey 'w')
 * WML Engine:
   * Support for [show_if] inside [message]	
   * Added ability to change the share_maps team attribute using [modify_side]
     tag. Be sure to use shroud=yes for that side