@@ -2,6 +2,8 @@ Version 1.7.4+svn:
  * Language and i18n:
    * Setup for tracking localized images.
    * Updated translations: Serbian.
+ * Miscellaneous and bugfixes:
+   * Optimized the cmake building if both game and tests are enabled.
 
 Version 1.7.4:
  * AI:
